--- a/src/app/components/chord-menu/chord-menu.component.scss
+++ b/src/app/components/chord-menu/chord-menu.component.scss
@@ -30,6 +30,7 @@
 
   width: 50%;
   height: 100%;
+  margin: 10px;
 
   background-color: #F2EECB;
   border: 1px inset black;
@@ -95,6 +96,7 @@ h2 {
 p {
   text-align: center;
   padding: 5px;
+  max-width: 90%;
 }
 
 hr {
