--- a/src/app/components/chord/chord.component.scss
+++ b/src/app/components/chord/chord.component.scss
@@ -1,6 +1,6 @@
 
 div {
-  background-color: #F2EECB;
+  background-color: #FFFFFF;
   width: max-content;
   height: max-content;
   padding: 10px;
