increase distance and size of mobile buttons

--- a/src/app/components/chord-menu/chord-menu.component.scss
+++ b/src/app/components/chord-menu/chord-menu.component.scss
@@ -11,6 +11,11 @@
     align-items: center;
 
     width: 100%;
+    
+    > button {
+      margin: 5px;
+      padding: 5px;
+    }
   }
 
   .input-text {
