--- a/src/app/components/chord-menu/chord-menu.component.html
+++ b/src/app/components/chord-menu/chord-menu.component.html
@@ -3,7 +3,7 @@
   <h1>Chord Generator</h1>
   <hr />
   <p>
-    This little tool will generate a list of chord voicings for you.
+    This little tool will generate a list of chord shapes for you.
     Simply input the tuning you're using as well as the chord you're looking
     for and press 'Generate' when you're ready. Use the '+' and '-' buttons
     to add and remove notes from tuning/chord.
@@ -12,7 +12,7 @@
   <h2>Tuning</h2>
   <hr />
   <p style="margin: 0">Put in the tuning you're using.</p>
-  <div class="input">
+  <div class="input-note">
     <button class="button-web" (click)="removeString()">-</button>
     <div class="input-text">
       <input *ngFor="let string of tuning; let i = index" type="text" [ngModel]="string.note" (change)="update($event, i, tuning)"/>
@@ -27,8 +27,12 @@
 
   <h2>Chord</h2>
   <hr />
-  <p style="margin: 0">Put in the chord you want to find voicings for.</p>
-  <div class="input">
+  <p>
+    Put in the chord you want to find shapes for.
+    Shape mode will let you pick a specific chord shape,
+    while Note mode will allow you to customise each note.
+  </p>
+  <div *ngIf="selectMode === 'note'" class="input-note">
     <button class="button-web" (click)="removeChord()">-</button>
     <div class="input-text">
       <input *ngFor="let string of chord; let i = index" type="text" [ngModel]="string.note" (change)="update($event, i, chord)"/>
@@ -41,6 +45,25 @@
     </div>
   </div>
 
+  <div *ngIf="selectMode === 'shape'" class="input-shape">
+    <div class="select">
+      <select name="notes" [(ngModel)]="shapeNote">
+        <option *ngFor="let note of notes" [value]="note">{{note}}</option>
+      </select>
+    </div>
+
+    <div class="select">
+      <select name="shapes" [(ngModel)]="shapeChord">
+        <option *ngFor="let shape of chords" [value]="shape.key">{{shape.key}}</option>
+      </select>
+    </div>
+  </div>
+  <div class="tab-holder">
+    <button class="tab" (click)="setShapeSelect()" [attr.selected]="selectMode === 'shape' ? '' : null">Shape mode</button>
+    <button class="tab" (click)="setNoteSelect()" [attr.selected]="selectMode === 'note' ? '' : null">Note mode</button>
+  </div>
+
+  <hr class="mt-0" />
   <button (click)="submit()">Generate</button>
 </div>
 
