--- a/src/app/components/chord-menu/chord-menu.component.scss
+++ b/src/app/components/chord-menu/chord-menu.component.scss
@@ -55,10 +55,20 @@
   display: none;
 }
 
-.input {
+.input-note {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  align-items: center;
+
+  width: 90%;
+  padding: 10px;
+}
+
+.input-shape {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   align-items: center;
 
   width: 90%;
@@ -81,6 +91,59 @@
     border-bottom: 1px solid black;
 
     text-align: center;
+  }
+}
+
+.tab-holder {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  width: 90%;
+
+  .tab {
+    border: unset;
+
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+
+    text-align: center;
+    cursor: pointer;
+
+    background-color: darken(#F2EECB, 5%) !important;
+  }
+
+  .tab:hover {
+    background-color: darken(#F2EECB, 10%) !important;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+  }
+
+  .tab[selected] {
+    background-color: darken(#F2EECB, 10%) !important;
+    cursor: default;
+  }
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.select {
+  border-bottom: 1px solid black;
+  width: fit-content;
+
+  margin: 0.5rem;
+  text-align: center;
+
+  > select {
+    padding: 0.5rem;
+
+    border: unset;
+    background-color: unset;
+
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
   }
 }
 
