add routing and separate out global styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
 
-<app-chord-menu></app-chord-menu>
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer>
+  <section>
+    <p>Graphic design is my passion.
+      <span class="bullet">&bull;</span>
+      Built by <a href="https://mlewicki.me">Maciej Lewicki</a> using <a href="https://angular.io"><i class="fab fa-angular"></i>Angular</a>
+      <span class="bullet">&bull;</span>
+      Code available on <a href="https://github.com/mlewicki12/angular-chord-generator"><i class="fab fa-github-alt"></i>Github</a></p>
+  </section>
+</footer>
