--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,25 @@
 
-app-chord-menu {
-  width: 100%;
-  height: 100%;
+main, footer {
+  width: 50%;
+}
 
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 950px) {
+  main, footer {
+    width: 90% !important;
+  }
+}
+
+footer {
+  p {
+    margin: 0;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bullet {
+    padding: 0 10px;
+  }
 }
