--- a/src/app/components/chord-menu/chord-menu.component.scss
+++ b/src/app/components/chord-menu/chord-menu.component.scss
@@ -1,9 +1,5 @@
 
 @media (max-width: 950px) {
-  .main {
-    width: 90% !important;
-  }
-
   .button-mobile {
     display: flex !important;
     flex-flow: row nowrap;
@@ -24,30 +20,6 @@
 
   .button-web {
     display: none;
-  }
-}
-
-.main {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-
-  width: 50%;
-  height: 100%;
-  margin: 10px;
-
-  background-color: #F2EECB;
-  border: 1px inset black;
-
-  button {
-    background-color: unset;
-    text-align: center;
-    background-color: darken(#F2EECB, 15%);
-  }
-
-  > button {
-    margin: 10px;
   }
 }
 
@@ -113,14 +85,20 @@
   }
 
   .tab:hover {
-    background-color: darken(#F2EECB, 10%) !important;
-    transition-duration: 1s;
+    background-color: darken(#F2EECB, 15%) !important;
+    transition-duration: 0.5s;
     transition-timing-function: ease;
   }
 
   .tab[selected] {
-    background-color: darken(#F2EECB, 10%) !important;
-    cursor: default;
+    background-color: #F2EECB !important;
+    transition-duration: 0.75s;
+    cursor: auto;
+  }
+
+  .tab:not([selected]) {
+    border: 1px dashed black;
+    border-bottom: unset;
   }
 }
 
@@ -145,66 +123,4 @@
     -webkit-appearance: none;
     appearance: none;
   }
-}
-
-h1 {
-  font-size: 1.75rem;
-  padding: 0;
-  margin: 0;
-  margin-top: 10px;
-}
-
-h2 {
-  font-size: 1.5rem;
-  padding: 0;
-  margin: 0;
-  margin-top: 10px;
-}
-
-p {
-  text-align: center;
-  padding: 5px;
-  max-width: 90%;
-}
-
-hr {
-  width: 90%;
-  border: unset;
-  border-bottom: 1px dashed black;
-  color: unset;
-}
-
-a {
-  margin: 5px;
-
-  font-weight: bold;
-  text-decoration: none;
-
-  color: #462FA7;
-}
-
-a:hover, a:active {
-  color: lighten(#462FA7, 10%);
-  font-size: 1.05rem;
-  transition-duration: 1s;
-  transition-timing-function: ease;
-}
-
-#footer {
-  > p {
-    margin: 0;
-
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .bullet {
-    padding: 0 10px;
-  }
-}
-
-i {
-  padding: 5px;
 }
