--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,78 @@
 app-root {
   width: 100%;
   height: 100%;
+
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+section, .main {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+
+  margin: 10px;
+
+  background-color: #F2EECB;
+  border: 1px inset black;
+
+  button {
+    background-color: unset;
+    text-align: center;
+    background-color: darken(#F2EECB, 15%);
+  }
+
+  > button {
+    margin: 10px;
+  }
+}
+
+h1 {
+  font-size: 1.75rem;
+  padding: 0;
+  margin: 0;
+  margin-top: 10px;
+}
+
+h2 {
+  font-size: 1.5rem;
+  padding: 0;
+  margin: 0;
+  margin-top: 10px;
+}
+
+p {
+  text-align: center;
+  padding: 5px;
+  max-width: 90%;
+}
+
+hr {
+  width: 90%;
+  border: unset;
+  border-bottom: 1px dashed black;
+  color: unset;
+}
+
+a {
+  margin: 5px;
+
+  font-weight: bold;
+  text-decoration: none;
+
+  color: #462FA7;
+}
+
+a:hover, a:active {
+  color: lighten(#462FA7, 10%);
+  font-size: 1.05rem;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+}
+
+i {
+  padding: 5px;
 }
