create scales generator page and basic navigation menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 
+<nav>
+  <section>
+    <p><a href="/chords">Chord Generator</a>
+    <span class="bullet">&bull;</span>
+    <a href="/scales">Scale Generator</a></p>
+  </section>
+</nav>
+
 <main>
   <router-outlet></router-outlet>
 </main>
