--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,19 @@ app-root {
   }
 }
 
+app-note-select, app-shape-select {
+  width: 90%;
+}
+
+.input-shape {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+
+  padding: 10px;
+}
+
 input {
   width: 1.5rem;
   padding: 0.5rem;
@@ -69,6 +82,25 @@ section, .main {
 
   > button {
     margin: 10px;
+  }
+}
+
+.select {
+  border-bottom: 1px solid black;
+  width: fit-content;
+
+  margin: 0.5rem;
+  text-align: center;
+
+  > select {
+    padding: 0.5rem;
+
+    border: unset;
+    background-color: unset;
+
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
   }
 }
 
