--- a/src/app/components/pages/chord/chord-menu/chord-menu.component.html
+++ b/src/app/components/pages/chord/chord-menu/chord-menu.component.html
@@ -22,7 +22,9 @@
     while Note mode will allow you to customise each note.
   </p>
   <app-note-select [(notes)]="chord" *ngIf="selectMode === 'note'"></app-note-select>
-  <app-scale-select (shapeNoteChange)="updateNote($event)" (shapeChordChange)="updateChord($event)" *ngIf="selectMode === 'shape'"></app-scale-select>
+  <app-scale-select [shapeNote]="shapeNote" (shapeNoteChange)="updateNote($event)"
+                    [shapeChord]="shapeChord" (shapeChordChange)="updateChord($event)"
+                    *ngIf="selectMode === 'shape'"></app-scale-select>
 
   <div class="tab-holder">
     <button class="tab" (click)="setShapeSelect()" [attr.selected]="selectMode === 'shape' ? '' : null">Shape mode</button>
