--- a/src/app/components/shared/scale-select/scale-select.component.html
+++ b/src/app/components/shared/scale-select/scale-select.component.html
@@ -1,14 +1,5 @@
 
 <div class="input-shape">
-  <div class="select">
-    <select name="notes" [ngModel]="shapeNote" (ngModelChange)="updateNote($event)">
-      <option *ngFor="let note of notes" [value]="note">{{note}}</option>
-    </select>
-  </div>
-
-  <div class="select">
-    <select name="shapes" [ngModel]="shapeChord" (ngModelChange)="updateChord($event)">
-      <option *ngFor="let shape of chords" [value]="shape.key">{{shape.key}}</option>
-    </select>
-  </div>
+  <chords-select [options]="notes" [value]="shapeNote" (valueChange)="updateNote($event)"></chords-select>
+  <chords-select [options]="chords" [value]="shapeChord" (valueChange)="updateChord($event)"></chords-select>
 </div>
